<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.InputPhoneFragment">
    <data>
        <variable
            name="inputPhoneFragment"
            type="com.hpay.openwallet.register.InputPhoneFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >


        <ImageView
            android:paddingTop="40dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_register_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/icon_hpay"
            android:layout_width="wrap_content"
            android:paddingRight="10dp"
            android:layout_height="wrap_content">

        </ImageView>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="50dp"
            android:id="@+id/txt_register_account"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            app:layout_constraintBottom_toTopOf="@+id/ln_number_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ln_number_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_register_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/icon_vn"
                android:layout_width="wrap_content"
                android:paddingRight="10dp"
                android:layout_height="wrap_content">

            </ImageView>
            <TextView
                android:textStyle="bold"
                android:paddingRight="10dp"
                android:text="@string/head_phone_vn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView

                android:hint="@string/your_number_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>
        <TextView
            android:id="@+id/policy_user"
            android:paddingBottom="10dp"
            android:text="@string/agree"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <Button
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/btn_next_step"
            android:text="@string/next_step"
            android:onClick="@{() -> inputPhoneFragment.nextActionIfAccountExits()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>