<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.HomeFragment">
    <data>
        <variable
            name="homeFragment"
            type="com.hpay.openwallet.home.HomeFragment" />
        <variable
            name="recyclerViewAdapter"
            type="com.hpay.openwallet.home.TransactionRecyclerViewAdapter" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:background="@color/purple_dark"
                android:id="@+id/toolbar_home"
                app:navigationIcon="?attr/homeAsUpIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/userNameDafult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance" />

        <TextView
            android:textColor="@color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balanceDefault" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/icon_deposit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </ImageView>
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deposit" />

            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:gravity="center"
                android:onClick="@{() -> homeFragment.gotoBankLinkScreen()}"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/icon_account_bank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </ImageView>
                <TextView
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accountBank" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:src="@drawable/banner_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="300dp">
            <TextView
                android:id="@+id/tvTitle"
                android:textSize="16sp"
                android:textColor="@color/color_transaction_recently"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactionRecently"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:background="@color/white"
                android:id="@+id/recyclerViewListTransaction"
                android:adapter="@{recyclerViewAdapter}"
                android:layout_width="match_parent"
                android:layout_height="230dp">

            </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:clickable="true"
                android:gravity="center"
                android:id="@+id/tvSeeAll"
                android:textSize="16sp"
                android:onClick="@{() -> homeFragment.gotoBankAllTransactionScreen()}"
                android:textColor="@color/color_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seeAllTransaction"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>