<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.InputPasswordFragment">

    <data>
        <variable
            name="inputPasswordFragment"
            type="com.hpay.openwallet.register.InputPasswordFragment" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_inputpass"
                app:navigationIcon="?attr/homeAsUpIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:text="@string/setPassTitleScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setPassTitle" />

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setPassSubTitle" />

        <com.hpay.openwallet.customview.OtpEditText
            android:imeOptions="actionDone"
            android:id="@+id/et_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="20sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</layout>